// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Margin Should have empty value, if user pass empty object 1`] = `
<div
  className=""
/>
`;

exports[`Margin Should have inline props if inline prop is passed 1`] = `
.c0 {
  display: inline-block !important;
}

<div
  className="c0"
/>
`;

exports[`Margin Should have margin left only without any media queries 1`] = `
.c0 {
  margin-left: 4rem;
}

<div
  className="c0"
/>
`;

exports[`Margin Should have margin left only without any media queries, if user pass string 1`] = `
.c0 {
  margin-left: 1.5rem;
}

<div
  className="c0"
/>
`;

exports[`Margin Should have margin top only without any media queries 1`] = `
.c0 {
  margin-top: 3rem;
}

<div
  className="c0"
/>
`;

exports[`Margin Should have no style when no props are passed 1`] = `
<div
  className=""
/>
`;

exports[`Margin Should have no style, if user pass empty string 1`] = `
<div
  className=""
/>
`;

exports[`Margin Should have xs to rem margin from all side 1`] = `
.c0 {
  margin: 0.25rem;
}

<div
  className="c0"
/>
`;

exports[`Margin Should have xs, sm to rem margin from all side 1`] = `
.c0 {
  margin: 0.25rem;
}

@media (min-width:48em) {
  .c0 {
    margin: 1rem;
  }
}

<div
  className="c0"
/>
`;

exports[`Margin Should have xs, sm to rem margin from right side only 1`] = `
.c0 {
  margin-right: 1rem;
}

@media (min-width:48em) {
  .c0 {
    margin-right: 1.5rem;
  }
}

<div
  className="c0"
/>
`;
